{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 43,
  "lineage": "72ae529f-32c2-f5c5-a004-b8a49b9c0bd0",
  "resources": [
    {
      "module": "module.spoke_spoke1",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke1.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub/routes/route-to-hub-firewall",
            "name": "route-to-hub-firewall",
            "next_hop_in_ip_address": "123.123.123.123",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "spoke1-rg-vnet",
            "route_table_name": "spoke-to-hub",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke_spoke1.azurerm_route_table.spoke_to_hub"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_spoke1",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke1.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub",
            "location": "southcentralus",
            "name": "spoke-to-hub",
            "resource_group_name": "spoke1-rg-vnet",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-hub-firewall",
                "next_hop_in_ip_address": "123.123.123.123",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/snet-workload"
            ],
            "tags": {
              "CostCenter": "IT-Security (This is an interesting tag)",
              "Environment": "Sandbox",
              "ManagedBy": "Terraform",
              "Owner": "NetworkTeam",
              "Purpose": "AzureFirewall"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spoke_spoke1",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke1.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/snet-workload",
            "route_table_id": "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub",
            "subnet_id": "/subscriptions/183c2e21-04c7-46f2-a7dd-a62332e957fa/resourceGroups/spoke1-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/snet-workload"
          },
          "dependencies": [
            "module.spoke_spoke1.azurerm_route_table.spoke_to_hub"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_spoke2",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke2.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub/routes/route-to-hub-firewall",
            "name": "route-to-hub-firewall",
            "next_hop_in_ip_address": "123.123.123.123",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "spoke2-rg-vnet",
            "route_table_name": "spoke-to-hub",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke_spoke2.azurerm_route_table.spoke_to_hub"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_spoke2",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke2.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub",
            "location": "southcentralus",
            "name": "spoke-to-hub",
            "resource_group_name": "spoke2-rg-vnet",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-hub-firewall",
                "next_hop_in_ip_address": "123.123.123.123",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/snet-workload"
            ],
            "tags": {
              "CostCenter": "IT-Security (This is an interesting tag)",
              "Environment": "Sandbox",
              "ManagedBy": "Terraform",
              "Owner": "NetworkTeam",
              "Purpose": "AzureFirewall"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spoke_spoke2",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke_to_hub",
      "provider": "module.spoke_spoke2.provider[\"registry.terraform.io/hashicorp/azurerm\"].spoke",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/snet-workload",
            "route_table_id": "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/routeTables/spoke-to-hub",
            "subnet_id": "/subscriptions/19d9f48a-d2a3-4351-a256-9d7ed76f557e/resourceGroups/spoke2-rg-vnet/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/snet-workload"
          },
          "dependencies": [
            "module.spoke_spoke2.azurerm_route_table.spoke_to_hub"
          ]
        }
      ]
    }
  ]
}